# temply

./: .containerignore  .dockerignore  .gh-labels.yml  .gitattributes  .gitignore  .gitlint  .pre-commit-config.yaml  .pylintrc  .travis.yml  Containerfile  LICENSE.txt  README.md  poetry.toml  pyproject.toml  requirements-build.txt  requirements-tests.txt  requirements.txt  setup.py  templaty.spec  temply.spec  tox.ini
.claude/: CLAUDE.md
.github/: dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  main.yml  pre-release.yml  release.yml
.github/workflows/env-install/: action.yml
.github/workflows/env-setup/: action.yml
.github/workflows/setup-github-bot/: action.yml
distributions/tarball/: temply.macOS.spec
scripts/: build.py  common.sh  env.py  generate.py  go.mod  go.sum  hook-commit-msg.sh  hook-pre-commit.sh  lib.sh  magefile.go  package.py  release.py  utils.py  workflow.sh
src/temply/: filters.py
templaty/: templaty.py
temply/: cli.py  filters.py  loaders.py  temply.py
tests/: __init__.py  conftest.py
tests/e2e/: temply_file_test.py  temply_stdin_test.py  temply_test.py
tests/fixtures/: advanced.tpl  doc.tpl  dotenv  envs.json  envs.tpl  include.tpl  json.tpl  simple.tpl  yaml.tpl
tests/fixtures/envdir/: MY_FOO
tests/unit/: templaty_test.py  temply_test.py
