[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pyright]
include = ["terranova", "scripts"]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "standard"

[tool.poetry]
name = "temply"
version = "0.7.4-dev"
description = "Render jinja2 templates on the command line with shell environment variables."
authors = ["Adrien Mannocci <adrien.mannocci@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/amannocci/temply"
documentation = "https://github.com/amannocci/temply"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
]
packages = [{ include = "temply" }]

[tool.poetry.scripts]
temply = "temply.temply:main"

[tool.poetry.urls]
"Changelog" = "https://github.com/amannocci/temply/CHANGELOG.md"
"Tracker" = "https://github.com/amannocci/temply/issues"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
click = "^8.1.7"        # BSD
jinja2 = "^3.1.4"       # BSD
PyYAML = "^6.0.2"       # MIT

[tool.poetry.dev-dependencies]
black = "^24.8.0"          # MIT
dotty-dict = "^1.3.1"       # MIT
poethepoet = "^0.27.0"      # MIT
poetry-plugin-up = "^0.7.2" # MIT
pre-commit = "^3.8.0"       # MIT
pyinstaller = "^6.10.0"      # GPL 2.0
pylint = "^3.2.6"           # GPL 2.0
pytest = "^8.3.2"           # MIT
sh = "^2.0.7"               # MIT
toml = "^0.10.2"            # MIT

[tool.poe.tasks."env:configure"]
help = "Setup environment."
script = "scripts.env:configure"

[tool.poe.tasks."project:upgrade"]
deps = ["env:configure"]
help = "Upgrade project dependencies."
cmd = "poetry up --latest"

[tool.poe.tasks.wipe]
shell = """
import shutil

for path in ["build", "dist"]:
    try:
        shutil.rmtree(path)
    except FileNotFoundError as err:
        print(f"Skipping {path} deletion...")
"""
interpreter = "python"

[tool.poe.tasks.generate]
deps = ["env:configure"]
help = "Generate configuration files."
cmd = "pyinstaller -n temply --onefile --noconfirm ./bin/temply"

[tool.poe.tasks.lint]
deps = ["env:configure"]
help = "Lint code project."
cmd = "pylint temply"

[tool.poe.tasks.fmt]
deps = ["env:configure"]
help = "Format code project."
sequence = [
    { cmd = "isort temply tests scripts" },
    { cmd = "black temply tests scripts" },
]

[tool.poe.tasks.build]
deps = ["wipe", "env:configure"]
help = "Build standalone binary."
script = "scripts.build:run"

[tool.poe.tasks.test]
deps = ["env:configure"]
help = "Run all tests."
cmd = "pytest tests"

[tool.poe.tasks."release:pre"]
deps = ["env:configure"]
help = "Create a PR with changes for release."
script = "scripts.release:pre"

[tool.poe.tasks."release"]
deps = ["env:configure"]
help = "Create a new temply release."
script = "scripts.release:run"

[tool.poe.tasks."release:post"]
deps = ["env:configure"]
help = "Prepare next iteration."
script = "scripts.release:post"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
